# nrl-supercoach-ml

./: .env.example  .gitignore  CLAUDE.md  README.md  model.json  model.txt  model_5_8.txt  model_HOK.txt  model_tuned_FLB.txt  pyproject.toml  run_weekly.py
.claude/: settings.local.json
config/: commentary_urls.json
models/: _train.py  autoencoder.pt  autoencoder.py  autoencoder_kmeans.pkl  autoencoder_meta.pkl  autoencoder_scaler.pkl  train.py  train_by_position.py  tune_by_position.py
models/artefacts/: mlflow.db  model.json  model.txt  model_2RF.txt  model_CTW.txt  model_FLB.txt  model_FRF.txt  model_HFB.txt  model_tuned_CTW.txt  model_tuned_HFB.txt
notebooks/: df_25.csv  outputcsv.csv  stats_2025.csv
optimiser/: build_player_registry.py  optimiser.py  scrape_team_lists.py  team_selector.py
pipelines/: gold_features.py  predict_round.py  sentiment_analysis.py  silver_transform.py
scraper/: commentary_scraper.py  nrl_fixture_scraper.py  nrl_match_centre_scraper.py  nrl_match_context.py  scrape_team_lists.py  stats_scraper.py
tests/: test_2026_scraper.py  test_azure_connection.py  test_gold_path.py  test_pagination.py  test_points.py  test_script.py
